# ADFT

./: README.md  pyproject.toml
.github/workflows/: ci.yml
adft/datasets/: benign_edge_thresholds.json  domain_dominance_campaign.json  golden_ticket_suspected.json  kerberoasting_massive.json  malformed_events.ndjson  password_spray_distributed.json  ransomware_pre_encryption_campaign.json  sample_logs.json
adft/datasets/demo_mixed_inputs/: attack.json  demo.json  dummy.evtx  sample_alerts.csv  sample_cef.cef  sample_events.yaml  sample_syslog.syslog  test.ndjson
adft/harden/: script_generator.py
